--- a/styles_accueil.css
+++ b/styles_accueil.css
@@ -10957,18 +10957,11 @@ html {
   padding: 1.25rem 2.5rem;
 }
 
-.callout {
-  padding: 15rem 0;
+.image-callout {
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("./vue/image/Accueil/super-cup.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.callout h2, .callout .h2 {
-  font-size: 3.5rem;
-  font-weight: 700;
-  display: block;
-  max-width: 30rem;
 }
 
 footer.footer {
