fix image callout

--- a/styles_accueil.css
+++ b/styles_accueil.css
@@ -10957,7 +10957,7 @@ html {
   padding: 1.25rem 2.5rem;
 }
 
-.callout {
+.image-callout {
   padding: 15rem 0;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("./vue/image/Accueil/super-cup.jpg");
   background-position: center center;
