--- a/vue/styles_accueil.css
+++ b/vue/styles_accueil.css
@@ -10959,7 +10959,7 @@ html {
 
 .image-callout {
   padding: 15rem 0;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("./vue/image/Accueil/super-cup.jpg");
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../vue/image/Accueil/super-cup.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -10993,7 +10993,7 @@ footer.footer .social-link:hover {
 
 .map {
   height: 30rem;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("./vue/image/Accueil/map.png");
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../vue/image/Accueil/map.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -11018,7 +11018,7 @@ footer.footer .social-link:hover {
   height: auto;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("./vue/image/Accueil/stade.jpg");
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../vue/image/Accueil/stade.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
