--- a/vue/styles.css
+++ b/vue/styles.css
@@ -1,142 +1,21 @@
 /* ========== STYLES DE LA PAGE ACCUEIL ========== */
 
-    /*corp du text */
-    .gradient-background {
-        overflow: auto;
-        background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
-        animation: gradient 15s ease infinite;
-        background-size: 400% 400%;
-        background-attachment: fixed;
+    .bg-accueil{
+        background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../vue/image/Accueil/stade.jpg");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 
-    /* fond animé */
-    @keyframes gradient {
-        0% {
-            background-position: 0% 0%;
-        }
-        50% {
-            background-position: 100% 100%;
-        }
-        100% {
-            background-position: 0% 0%;
-        }
+    .image-callout{
+        background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../vue/image/Accueil/super-cup.jpg");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
-
-    .wave {
-        background: rgb(255 255 255 / 25%);
-        border-radius: 1000% 1000% 0 0;
-        position: fixed;
-        width: 200%;
-        height: 12em;
-        animation: wave 10s -3s linear infinite;
-        transform: translate3d(0, 0, 0);
-        opacity: 0.8;
-        bottom: 0;
-        left: 0;
-        z-index: -1;
-    }
-
-    .wave:nth-of-type(2) {
-        bottom: -1.25em;
-        animation: wave 18s linear reverse infinite;
-        opacity: 0.8;
-    }
-
-    .wave:nth-of-type(3) {
-        bottom: -2.5em;
-        animation: wave 20s -1s reverse infinite;
-        opacity: 0.9;
-    }
-
-
-    @keyframes wave {
-        2% {
-            transform: translateX(1);
-        }
-
-        25% {
-            transform: translateX(-25%);
-        }
-
-        50% {
-            transform: translateX(-50%);
-        }
-
-        75% {
-            transform: translateX(-25%);
-        }
-
-        100% {
-            transform: translateX(1);
-        }
-    }
-    @keyframes slideInFromLeft {
-        0% {
-            transform: translateX(-100%);
-        }
-        100% {
-            transform: translateX(0);
-        }
-    }
-
-    .animated-text {
-        /* Appliquer l'animation */
-        animation: 1s ease-out 0s 1 slideInFromLeft;
-        /* Centrer le texte horizontalement et verticalement */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        /* Ajouter plus de styles selon le besoin */
-    }
-    .custom-div {
-        /* border: 2px solid #000;  cadre de 2px de largeur solide noir */
-        font-family: cursive;
-        background-color: rgba(255, 255, 255, 0.4); /* fond transparent (blanc avec 50% d'opacité) */
-        padding: 20px; /* espace intérieur de la div */
-        border-radius: 10px; /* arrondi des bords de la div */
-        width: 575px;
-    }
-
-    /* Personnalisation du Slider */
-    .slider-personnalise {
-        max-width: 100%; /* Ajustez cette valeur selon vos besoins */
-        margin: auto; /* Centrer le slider */
-        overflow: hidden; /* Assurez-vous que rien ne dépasse du slider */
-    }
-
-    /* Définir la hauteur du slider */
-    .carousel-inner, .carousel-item, img {
-        height: 70vh; /* 50% de la hauteur de la fenêtre */
-        object-fit: cover; /* Assure que les images couvrent le slider sans être déformées */
-    }
-    .carousel,.carousel-inner,.carousel-item,.carousel-item img {
-        margin: 0;
-        padding: 0;
-        border: none;
-    }
-    .carousel-caption {
-        background: rgba(0, 0, 0, 0.5); /* Fond semi-transparent pour la légende */
-        color: white; /* Couleur du texte */
-    }
-
-    .carousel-item {
-        transition: transform 0.5s linear; /* Ajustez la durée et le type de transition selon les besoins */
-    }
-
-    .police {
-        font-family : cursive;
-    }
-
-    .cadre-div {
-        border: 2px solid #ccc; /* Cadre de 2px avec une couleur grise */
-        padding: 20px; /* Espace intérieur de la div */
-        border-radius: 10px; /* Arrondi des bords */
-        background-color: rgba(255, 255, 255, 0.4);
-    }
-
 
 /* ========== FIN STYLES DE LA PAGE ACCUEIL ========== */
+    
 
 
 /* ========== STYLES DE LA PAGE LISTMATCH ========== */
@@ -151,147 +30,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-    }
-
-    .loop-wrapper {
-    margin: 0 auto;
-    position: relative;
-    display: block;
-    width: 50vw;
-    height: 150px;
-    overflow: hidden;
-    border-bottom: 3px solid #fff;
-    color: #fff;
-    }
-    .mountain {
-    position: absolute;
-    right: -900px;
-    bottom: -20px;
-    width: 2px;
-    height: 2px;
-    box-shadow: 
-    0 0 0 50px #4DB6AC,
-    60px 50px 0 70px #4DB6AC,
-    90px 90px 0 50px #4DB6AC,
-    250px 250px 0 50px #4DB6AC,
-    290px 320px 0 50px #4DB6AC,
-    320px 400px 0 50px #4DB6AC
-    ;
-    transform: rotate(130deg);
-    animation: mtn 20s linear infinite;
-    }
-    .hill {
-    position: absolute;
-    right: -900px;
-    bottom: -50px;
-    width: 400px;
-    border-radius: 50%;
-    height: 20px;
-    box-shadow: 
-    0 0 0 50px #4DB6AC,
-    -20px 0 0 20px #4DB6AC,
-    -90px 0 0 50px #4DB6AC,
-    250px 0 0 50px #4DB6AC,
-    290px 0 0 50px #4DB6AC,
-    620px 0 0 50px #4DB6AC;
-    animation: hill 4s 2s linear infinite;
-    }
-    .tree, .tree:nth-child(2), .tree:nth-child(3) {
-    position: absolute;
-    height: 100px; 
-    width: 35px;
-    bottom: 0;
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/130015/tree.svg) no-repeat;
-    }
-    .rock {
-    margin-top: -17%;
-    height: 2%; 
-    width: 2%;
-    bottom: -2px;
-    border-radius: 20px;
-    position: absolute;
-    background: #ddd;
-    }
-    .truck, .wheels {
-    transition: all ease;
-    width: 85px;
-    margin-right: -60px;
-    bottom: 0px;
-    right: 50%;
-    position: absolute;
-    background: #eee;
-    }
-    .truck {
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/130015/truck.svg) no-repeat;
-    background-size: contain;
-    height: 60px;
-    }
-    .truck:before {
-    content: " ";
-    position: absolute;
-    width: 25px;
-    box-shadow:
-    -30px 28px 0 1.5px #fff,
-    -35px 18px 0 1.5px #fff;
-    }
-    .wheels {
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/130015/wheels.svg) no-repeat;
-    height: 15px;
-    margin-bottom: 0;
-    }
-
-    .tree  { animation: tree 3s 0.000s linear infinite; }
-    .tree:nth-child(2)  { animation: tree2 2s 0.150s linear infinite; }
-    .tree:nth-child(3)  { animation: tree3 8s 0.050s linear infinite; }
-    .rock  { animation: rock 4s   -0.530s linear infinite; }
-    .truck  { animation: truck 4s   0.080s ease infinite; }
-    .wheels  { animation: truck 4s   0.001s ease infinite; }
-    .truck:before { animation: wind 1.5s   0.000s ease infinite; }
-
-
-    @keyframes tree {
-    0%   { transform: translate(1350px); }
-    50% {}
-    100% { transform: translate(-50px); }
-    }
-    @keyframes tree2 {
-    0%   { transform: translate(650px); }
-    50% {}
-    100% { transform: translate(-50px); }
-    }
-    @keyframes tree3 {
-    0%   { transform: translate(2750px); }
-    50% {}
-    100% { transform: translate(-50px); }
-    }
-
-    @keyframes rock {
-    0%   { right: -200px; }
-    100% { right: 2000px; }
-    }
-    @keyframes truck {
-    0%   { }
-    6%   { transform: translateY(0px); }
-    7%   { transform: translateY(-6px); }
-    9%   { transform: translateY(0px); }
-    10%   { transform: translateY(-1px); }
-    11%   { transform: translateY(0px); }
-    100%   { }
-    }
-    @keyframes wind {
-    0%   {  }
-    50%   { transform: translateY(3px) }
-    100%   { }
-    }
-    @keyframes mtn {
-    100% {
-    transform: translateX(-2000px) rotate(130deg);
-    }
-    }
-    @keyframes hill {
-    100% {
-    transform: translateX(-2000px);
-    }
     }
 
 /* ========== FIN STYLES DE LA PAGE LISTMATCH ========== */
